[package]
name = "pqc-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pqc-demo"
path = "src/main.rs"

[[bin]]
name = "ed25519-demo"
path = "src/ed25519_demo.rs"

[dependencies]
solana-pqc = { path = "../agave/pqc" }
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
